refactor after CodeEater video19