@@ -1,6 +1,8 @@
 package com.tsa.server.domain.services;
 
+import com.tsa.server.domain.exceptions.WebServerException;
 import com.tsa.server.domain.interfaces.ContentReader;
+import com.tsa.server.domain.util.HttpStatus;
 
 import java.io.*;
 import java.nio.file.Path;
@@ -14,8 +16,17 @@ public class DefaultContentReader implements ContentReader {
     }
 
     @Override
-    public InputStream getConnectionToContent(String uri) throws FileNotFoundException {
-        String classPath = Path.of("").toAbsolutePath().toString();
-        return new FileInputStream(Paths.get(classPath, appPath, uri).toFile());
+    public InputStream getConnectionToContent(String uri) {
+        String classPath = getPathToFile(uri);
+        try {
+            return new FileInputStream(classPath);
+        } catch (FileNotFoundException e) {
+            throw new WebServerException(e, HttpStatus.NOT_FOUND);
+        }
+    }
+
+    String getPathToFile(String uri) {
+        String pathPrefix = Path.of("").toAbsolutePath().toString();
+        return Paths.get(pathPrefix, appPath, uri).toString();
     }
 }
